2007-09-07  Andy Wingo  <wingo@pobox.com>

	* doc/section-*.texi: 
	* doc/defuns-*.texi: Regenerated.

	* gnome/gw/support/gtk-doc.scm (c-arguments->scheme-arguments)
	(function-stexi-arguments): Use @tie{} instead of a space where
	appropriate.
	(*gtk-doc-sdocbook->stexi-rules*): Translate FALSE and TRUE.
	(gtk-doc->texi-stubs): Put the subtitle in a subparagraph, not the
	title.
	(function-stexi-arguments): Don't wrap the var in @var, that makes
	it to be @tt font, which we don't want or need.
	(make-defs/g-wrap): Doc generics using @deffnx, not @deffn.

	* doc/Makefile.am: Factor out automatic g-wrap docs stuff into
	common makefile routines.

2007-09-02  Andy Wingo  <wingo@pobox.com>

	* doc/guile-gnome-glib.texi: New file, includes all the rest to
	make glib docs.

	* doc/Makefile.am: Add rules to regenerate guile-gnome-glib.texi's
	dependencies. Add guile-gnome-glib manual.

	* gnome/gw/support/gtk-doc.scm: Add a couple of public methods and
	hacks to get GLib docbook to work. Will document more later.

	* doc/defuns-*.texi:
	* doc/section-*.texi: Add generated documentation.

2007-09-01  Andy Wingo  <wingo@pobox.com>

	* test-suite/Makefile.am: Add some hairyness for the api check
	test.

	* gnome/gw/support/gobject.scm: Don't export wrap-enum!; we just
	add a method on the wrap-enum! from (g-wrap enumeration).

	* test-suite/gobject.api: An apicheck description of the gobject
	api.

	* test-suite/api.scm: New test, tests that our API has not
	regressed.

	* gnome/gobject/gobject.scm (make-gobject-instance): Fix bug
	introduced by doc (define placement).

	* gnome/gw/generics.scm: Document, and re-export (gnome gobject
	generics).

	* doc/guile-gnome-gobject.scm (*modules*): Add the (gnome gw
	generics) module to the list.

	* gnome/gw/support/modules.scm: 
	* gnome/gw/support/defs.scm: Document.

	* doc/guile-gnome-gobject.scm: Remove the concept index; we
	defined no concepts.

	* gnome/gw/support/gobject.scm: Document. Removed the undefined